Fixed scrollbar style

--- a/web/src/components/Tree/Tree.scss
+++ b/web/src/components/Tree/Tree.scss
@@ -232,3 +232,16 @@ $tree-item-border-radius: 0.28571429rem;
     margin-bottom: 5px;
   }
 }
+
+.tree-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.tree-container::-webkit-scrollbar-thumb {
+  background: #cce2ff;
+  border-radius: 10px;
+}
+
+.tree-container::-webkit-scrollbar-track {
+  background: #f5f5f5;
+}
