--- a/web/src/main.css
+++ b/web/src/main.css
@@ -14,20 +14,28 @@
   font-style: normal;
 }
 
-/* Custom scrollbar styles */
+/* Custom Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px; /* Make the scrollbar thinner */
+  width: 10px !important;
+  height: 10px !important;
 }
 
 ::-webkit-scrollbar-track {
-  background: #1f2937;
+  background: #1f2937 !important; /* Color for scrollbar track */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #495670;
-  border-radius: 10px; /* Rounded scrollbar edges */
-  border: 2px solid #1f2937; /* Adds some spacing around the scrollbar thumb */
+  background-color: #495670 !important;
+  border-radius: 10px !important;
+  border: 2px solid #1f2937 !important;
 }
+
+/* Optional: Hover effect on the thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #495670 !important;
+}
+
+::-webkit-scrollbar-corner { background: #1f2937; }
 
 body {
   font-family: 'InterVar', monospace;
